--- a/css/media.css
+++ b/css/media.css
@@ -11,9 +11,16 @@
 }
 @media (max-width:1120px){
     .container {
-        padding: 0 60px;
+        padding: 0 30px;
         max-width: 950px;
     }
+    header::before {
+        transform: scale(1);
+    }
+    header {
+        padding-top: 10px;
+    }
+
     .main-window_content_title {
         font-size: 70px;
         line-height: 95px;
@@ -25,8 +32,20 @@
     .kard {
         flex: 0 0 300px;
     }
+    .kard1 {
+        position: relative;
+        animation: slayd1 15s infinite;
+    }
+    .kard2 {
+        position: relative;
+        animation: slayd2 15s infinite;
+    }
     .kard3 {
-        display: none;
+        animation: slayd3 15s infinite;
+        position: absolute;
+        width: 300px;
+        transform: translatex(160px);
+        margin: 0 auto;
     }
     .kard_content_box {
         height: 265px;
@@ -58,6 +77,12 @@
         padding: 0 40px;
         max-width: 728px;
     }
+    header {
+        padding-top: 10px;
+    }
+    header::before {
+        transform: scale(1);
+    }
     .main-window_content {
         height: 230px;
     }
@@ -76,11 +101,15 @@
         flex: 0 0 80%;
         padding: 42px 30px;
     }
-    .kard3 {
-        display: none;
-    }
+
     .kard2 {
-        display: none;
+        position: absolute;
+        width: 80%;
+        margin: 0 auto;
+    }
+    .kard3 {
+        width: 80%;
+        transform: translate(0);
     }
     .kard_content_box_link-box .grad-blue-link-more {
         width: 60%;
@@ -104,6 +133,90 @@
         height: 400px;
     }
     
+
+    @keyframes slayd1 {
+        0% {
+            transform: translate(0);
+            opacity: 1;
+        }
+        16.6% {
+            transform: translate(-150%);
+            opacity: 0;
+        }
+        33.2% {
+            transform: translate(150%);
+            opacity: 0;
+        }
+        49.8% {
+        }
+        66.4% {
+            transform: translate(150%);
+            opacity: 0;
+        }
+        85% {
+            transform: translate(0);
+            opacity: 1;
+        }
+        100% {
+            opacity: 1;
+        }
+    }
+    @keyframes slayd2 {
+        0% {
+            transform: translate(150%);
+            opacity: 0;
+        }
+        16.6% {
+            transform: translate(0);
+            opacity: 1;
+        }
+        33.2% {
+            transform: translate(0);
+            opacity: 1;
+        }
+        49.8% {
+            transform: translate(-150%);
+            opacity: 0;
+        }
+        66.4% {
+            transform: translate(150%);
+            opacity: 0;
+        }
+        85% {
+        }
+        100% {
+            transform: translate(150%);
+            opacity: 0;
+        }
+    }
+    @keyframes slayd3 {
+        0% {
+            transform: translate(150%);
+            opacity: 0;
+        }
+        16.6% {
+        }
+        33.2% {
+            transform: translate(150%);
+            opacity: 0;
+        }
+        49.8% {
+            transform: translate(0);
+            opacity: 1;
+        }
+        66.4% {
+            transform: translate(0);
+            opacity: 1;
+        }
+        85% {
+            transform: translate(-150%);
+            opacity: 0;
+        }
+        100% {
+            transform: translate(150%);
+            opacity: 0;
+        }
+    }
 }
 
 
@@ -112,6 +225,14 @@
         font-weight: 400;
         font-size: 13px;
         line-height: 16px;
+    }
+
+    .container {
+        padding: 0 20px;
+    }
+
+    .header-box {
+        padding: 0 10px;
     }
 
     .nav {
@@ -140,6 +261,13 @@
     .kard {
         flex: 0 0 100%;
         min-height: 540px;
+    }
+    .kard2 {
+        width: 100%;
+    }
+    .kard3 {
+        width: 100%;
+        transform: translate(0);
     }
     .kard_content_box {
         height: 280px;
@@ -215,6 +343,9 @@
         line-height: 120%;
     }
 
+    .kard2 {
+        background-position: -80px;
+    }
     .kard_content_box {
         height: 160px;
     }
