--- a/css/style.css
+++ b/css/style.css
@@ -29,17 +29,36 @@ html {
     max-width: 1160px;
     margin: 0 auto;
     padding: 0 20px;
+
 }
 header {
     position: fixed;
-    margin-top: 25px;
+    padding-top: 25px;
     width: 100%;
     top: 0;
-    left: 0;    
+    left: 0;
+    z-index: 999;
+}
+header::before {
+    content: '';
+    position: absolute;
+    top: -5px;
+    left: 0;
+    width: 100%;
+    height: 130%;
+    border-radius: 5px;
+    background-color: rgba(0, 0, 0, 0.5);
+    backdrop-filter: blur(4px);
+    transform: scaley(1);
+    z-index: 10;
 }
 .header-box {
+    position: relative;
+    padding: 0 20px;
     display: flex;
     justify-content: space-between;
+    align-items: center;
+    z-index: 100;
 }
 .nav {
     display: flex;
@@ -70,13 +89,16 @@ header {
 .burgmenu:hover {
     background-color: rgba(255, 255, 255, 0.4);
 }
+.burgmenu:active {
+    background-color: rgba(255, 255, 255, 0.15);
+}
 .burgmenu_dec {
     display: block;
     position: absolute;
     width: 40px;
     height: 5px;
     border-radius: 10px;
-    background-color: white;
+    background-color: rgb(255, 255, 255);
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
@@ -88,7 +110,7 @@ header {
     width: 40px;
     height: 5px;
     border-radius: 10px;
-    background-color: white;
+    background-color: rgb(255, 255, 255);
     left: 0;
     top: 0;
 }
@@ -127,6 +149,7 @@ header {
 
 .sec2 {
     margin-bottom: 110px;
+    overflow: hidden;
 }
 .sec2_title {
     display: flex;
@@ -156,6 +179,7 @@ header {
 .kards-box {
     display: flex;
     justify-content: space-between;
+    position: relative;
 }
 .kard {
     flex: 0 0 32.5%;
@@ -364,6 +388,90 @@ header {
 
 
 
+@keyframes slayd1 {
+    0% {
+    }
+    16.6% {
+        transform: translate(-520px);
+        opacity: 0;
+    }
+    33.2% {
+        transform: translate(840px);
+        opacity: 0;
+    }
+    49.8% {
+        transform: translate(320px);
+        opacity: 1;
+    }
+    66.4% {
+        transform: translate(320px);
+        opacity: 1;
+    }
+    85% {
+        opacity: 1;
+        transform: translate(0px);
+    }
+    100% {}
+}
+@keyframes slayd2 {
+    0% {
+        right: 0;
+    }
+    16.6% {
+        transform: translate(-320px);
+        opacity: 1;
+    }
+    33.2% {
+        transform: translate(-320px);
+        opacity: 1;
+    }
+    49.8% {
+        transform: translate(-840px);
+        opacity: 0;
+    }
+    66.4% {
+        transform: translate(520px);
+        opacity: 0;
+    }
+    85% {
+        opacity: 1;
+        transform: translate(0px);
+    }
+    100% {}
+}
+@keyframes slayd3 {
+    0% {
+        transform: translate(680px);
+        opacity: 0;
+    }
+    16.6% {
+        transform: translate(160px);
+        opacity: 1;
+    }
+    33.2% {
+        transform: translate(160px);
+        opacity: 1;
+    }
+    49.8% {
+        transform: translate(-160px);
+        opacity: 1;
+    }
+    66.4% {
+        transform: translate(-160px);
+        opacity: 1;
+    }
+    85% {
+        opacity: 0;
+        transform: translate(-680px);
+    }
+    100% {
+        opacity: 0;
+    }
+}
+
+
+
+
 
 
 
@@ -380,6 +488,7 @@ header {
     font-size: 14px;
     line-height: 17px;
     transition: .2s;
+    z-index: 1;
 }
 .grad-blue-link:hover {
     opacity: 0.85;
